@@ -4,15 +4,16 @@ import com.api.itmanager.modules.client.dto.ClientRequest;
 import com.api.itmanager.modules.client.dto.ClientResponse;
 import com.api.itmanager.modules.client.model.Client;
 import com.api.itmanager.modules.client.repository.ClientRepository;
+import com.api.itmanager.modules.employee.repository.EmployeeRepository;
+import com.api.itmanager.modules.infrastructure.device.repository.DeviceRepository;
 import com.api.itmanager.util.exception.ClientNotFoundException;
 import com.api.itmanager.util.response.Response;
 import com.api.itmanager.util.validation.ClientValidation;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ClientService {
@@ -20,23 +21,28 @@ public class ClientService {
     @Autowired
     private ClientRepository clientRepository;
 
+    @Autowired
+    private EmployeeRepository employeeRepository;
+
+    @Autowired
+    private DeviceRepository deviceRepository;
+
     public List<ClientResponse> listAll() {
-        return new ArrayList<>();
-//        return clientRepository
-//                .findAll()
-//                .stream()
-//                .map(ClientResponse::of)
-//                .toList();
+        return clientRepository
+                .findAll()
+                .stream()
+                .map(ClientResponse::of)
+                .collect(Collectors.toList());
     }
 
-    public ClientResponse findById(Long id) throws ClientNotFoundException {
+    public ClientResponse findById(Long id) {
         return clientRepository
                 .findById(id)
                 .map(ClientResponse::of)
                 .orElseThrow(() -> new ClientNotFoundException(id));
     }
 
-    public ClientResponse findByCnpj(String cnpj) throws ClientNotFoundException {
+    public ClientResponse findByCnpj(String cnpj) {
         return clientRepository
                 .findByCnpj(cnpj)
                 .map(ClientResponse::of)
@@ -50,17 +56,17 @@ public class ClientService {
 
         Client savedClient = clientRepository.save(Client.of(clientRequest));
 
-        return new Response(HttpStatus.CREATED.value(), "Created client with ID " + savedClient.getId());
+        return new Response("Created client with ID " + savedClient.getId());
     }
 
-    public Response updateById(Long id, ClientRequest clientRequest) throws ClientNotFoundException {
+    public Response updateById(Long id, ClientRequest clientRequest) {
         ClientResponse clientResponse = findById(id);
 
         ClientValidation.clientUpdateValidation(clientRequest, clientResponse, existsByName(clientRequest.getName()), existsByCnpj(clientRequest.getCnpj()));
 
         clientRepository.save(createClientToUpdate(id, clientRequest));
 
-        return new Response(HttpStatus.OK.value(), "Updated client with ID " + id);
+        return new Response("Updated client with ID " + id);
     }
 
     private Client createClientToUpdate(Long id, ClientRequest request) {
@@ -69,11 +75,11 @@ public class ClientService {
         return clientToUpdate;
     }
 
-    public Response delete(Long id) throws ClientNotFoundException {
+    public Response delete(Long id) {
         findById(id);
         clientRepository.deleteById(id);
 
-        return new Response(HttpStatus.OK.value(), "Deleted client with ID " + id);
+        return new Response("Deleted client with ID " + id);
     }
 
     public boolean existsByName(String name) {
